adding functioning card draw feature

--- a/src/css/BingoCard.css
+++ b/src/css/BingoCard.css
@@ -83,3 +83,10 @@
     position:absolute;
     top:0;
 }
+
+#bingoGroupInfo{
+    width: fit-content;
+    margin-left: auto;
+    text-align: center;
+    margin-right: auto;
+}
