--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -2,6 +2,22 @@
     display:block;
 }
 
+
+#homeContainer{
+    height: 100%;
+    background: url(https://wallpaperaccess.com/full/3062914.jpg);
+    background-size: cover;
+
+}
+#profileMenu{
+    background:white;
+    opacity: 0.9;
+}
+
+
+
+
+
 #profileMenu img{
     object-fit:contain;
     width:100%;
