added profile links to other users profiles and card collections, and added cookies to store sessions

--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -4,9 +4,9 @@
 
 
 #homeContainer{
-    height: 100%;
     background: url(https://cdn.wallpapersafari.com/34/89/82MW34.jpg);
     background-size: cover;
+    min-height:100%;
 
 }
 #profileMenu{
